# aws-profile-switcher

./: Cargo.toml  README.md
src/: main.rs
