[package]
name = "apes"
version = "0.1.3"
edition = "2021"
description = "AWS_PROFILE switcher"
license = "MIT"
homepage = "https://github.com/BeLeap/aws-profile-switcher"
repository = "https://github.com/BeLeap/aws-profile-switcher"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.21", features = ["derive"] }
# Temporrary fix until pr merged.
fuzzy_finder = { git = "https://github.com/beleap/fuzzy_finder", branch="fix/out-of-index" }
shellexpand = "2.1.2"
