[package]
name = "apes"
version = "0.1.5"
edition = "2021"
description = "AWS_PROFILE switcher"
license = "MIT"
homepage = "https://github.com/BeLeap/aws-profile-switcher"
repository = "https://github.com/BeLeap/aws-profile-switcher"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.21", features = ["derive"] }
fuzzy_finder = "0.3.0"
shellexpand = "2.1.2"
